# GPGPU-with-GLES

./: LICENSE  README(1).md  README.md  Triangle.cpp  Triangle_Code.c  array_add_float.c  array_add_float.fs  chain_add_array_float.fs  fir_conv2d_float_3.fs  glad.c  gpgpu_gles.c  matrix_add_120.fs  rectangle.cpp  x4_multiplication.fs
examples/: CMakeLists.txt  glad.c  image_process.cpp
examples/array_x4/: CMakeLists.txt  array_x4.c
examples/array_x9/: CMakeLists.txt  array_x9.c
examples/chain_conv2d_float/: chain_conv2d_float.c
examples/mult_mat_int/: CMakeLists.txt  mult_mat_int.c
include/: defines.h  gpgpu_gles.h
shaders/: README.md  array_add_float.fs  array_x4.fs  array_x9.fs  fir_conv2d_float_3.fs  mat_transpose_addition.fs  matrix_transpose.fs  mult_mat_int.fs
src/: gpgpu_gles.c  gpgpu_int.c  triangle1.c
